sass/custom-styles.scss
/* ... */
header {
  &.archive-header {
    margin-bottom: 20px;
    p {
      font-size: .9em;
    }
  }
  &.blog-header {
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    background-blend-mode: luminosity;
  }
  &.object-archive-header, &.object-header {
    margin-top: 65px;
    position: relative;
    background: $black;
    .object-header-images {
      overflow: scroll;
      white-space: nowrap;
      .image-cont {
        max-height: 600px;
        width: auto;
        padding: 0 10px 0 0;
        display: inline-block;
        zoom: 1;
        vertical-align: top;
        img {
          max-height: 600px;
          width: auto;
        }
      }
    }
    .object-information {
      position: absolute;
      top: 30px;
      width: 100%;
      letter-spacing: 0px;
      color: $light;
      h1, h3 {
        &.object-title {
          text-transform: uppercase;
          color: $light;
          a {
            color: $light;
          }
        }
      }
      h3.object-title {
        text-transform: uppercase;
        color: $light;
        a {
          color: $light;
        }
      }

      .object-info {
        font-size: 14px;
        a {
          color: $light;
          &:hover {
            color: darken($light, 15%);
            text-decoration: none;
          }
        }
        span {
          color: $light;
          font-size: .9em;
          &.region {
            font-weight: 700;
          }
          &.culture {

          }
          &.creation {
            display: block;
          }
          &.material {
            display: block;
          }
        }
        .dimensions {
          margin-top: 10px;
          color: $light;
          span {
            color: $light;
          }
        }
      }
      .local {
        margin-bottom: 10px;
        span {
          &.region {
            font-weight: 700;
          }
          &.culture {

          }
        }
      }
    }
    .object-archive-slider {
      position: relative;
      margin-bottom: 0px;
      .object-information {
        opacity: 0;
        @include transition (500ms);
      }
      .loading {
        width: 100%;
        min-height: 400px;
        display: flex;
        justify-content: center;
        align-items: center;
        font-size: 3em;
      }
      .object-slides {
        max-width: 100vw;
        .slide {
          text-align: center;
          max-height: 70vh; 
          background: $black;
          img {
            max-height: 70vh;
            // width: 100%;
            margin: 0 auto;
          }
        }
      }

      .slide-controls {
        opacity: 0;
        cursor: pointer;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        font-size: 50px;
        line-height: 70px;
        padding: 40px;
        position: absolute;
        top: 60%;
        color: #fff;
        width: 100%;
        @include transition(500ms);
        .interaction {
          width: 70px;
          height: 70px;
          border-radius: 30;
          border: 1px solid transparent;
          text-align: center;
          align-items: center;
          justify-content: center;
          display: flex;
          @include transition(500ms);
          &:hover {
            background: rgba(255,255,255,.3);
            border: 1px solid #fff;

            @include transition(100ms);
          }
          &.slick-disabled {
            opacity: .4;
            color: #ccc;
            cursor: not-allowed;
          }
        }

      }
      .object-slides-navigation {
        width: 100%;
        margin: 0 auto;
        display: flex;
        flex-direction: row;
        justify-content: center;
        z-index: 10;
        position: relative;
        opacity: 0;
        height: 80px;
        padding-bottom: 20px;
        margin-top: -80px;
        @include transition(500ms);
        .slide-nav {
          width: 70px;
          height: 70px;
          image {
            width: 100%;
          }
          margin: 5px;
          border: 5px solid transparent;
          &.current {
            border: 5px solid #fff;
          }
        }
      }
      &:hover {
        .object-slides-navigation, .slide-controls, .object-information {
          @include transition(100ms);
          opacity: 1;
        }
      }
    }
  }
}
section {
  &.object-filters {
    .facet-container {
      span {
        &.label {
          color: $primary;
          text-transform: uppercase;
          font-weight: 300;
          font-size: 14px;
        }
      }
      .facetwp-facet {
        font-size: 14px;
        margin-bottom: 20px;
        &.facetwp-type-radio {
          display: flex;
          flex-wrap: wrap;
          flex-direction: row;
          .facetwp-radio {
            margin-right: 4px;
            padding: 4px 4px 2px 4px;
            border: 1px solid #888;
            color: #888;
            background: none;
            white-space: nowrap;
            font-size: 12px;
            line-height: 15px;
            &.checked {
              border-color: $primary;
              color: $white;
              background: $primary;
            }
            &.disabeled {
              background: #fff;
              border: 1px solid #ccc;
              color: #ccc;
            }
          }


        }
      }
    }
  }
}
/* ... */

